syntax = "proto3";

option csharp_namespace = "eDoxa.Grpc.Protos.Cashier.Requests";

import "cashier_dtos.proto";
import "cashier_enums.proto";
import "custom_types.proto";

package edoxa.services.cashier;

message FetchChallengePayoutsRequest {}

message FindChallengePayoutRequest {
  string challengeId = 1;
}

message CreateChallengePayoutRequest {
  string challengeId = 1;
  int32 payoutEntries = 2;
  EntryFeeDto entryFee = 3;
}

message CreateTransactionRequest {
  oneof transaction {
    int32 bundle = 1;
    CustomTransaction custom = 2;
  }
  map<string, string> metadata = 3;

  message CustomTransaction {
    EnumTransactionType type = 1;
    EnumCurrency currency = 2;
    customTypes.DecimalValue amount = 3;
  }
}

message CreateTransactionAggregatorRequest {
  int32 bundle = 1;
}